--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -5,6 +5,8 @@ html {
 main {
     padding: 20px;
     text-align: center;
+    position: relative;
+    height: calc(100% - 100px);
 }
 
 body, main * {
@@ -113,7 +115,7 @@ textarea {
 
 .right-top-buttons  {
     position: absolute;
-    top: 70px;
+    top: 10px;
     right: 2%;
 }
 
