--- a/app/Views/index.html.twig
+++ b/app/Views/index.html.twig
@@ -42,8 +42,8 @@
         {% if session.user %}
             {% if session.user.Families|length == 0 %}
                 <h2>Vous n'avez aucune famille</h2>
-                <a class="btn" href="{{ path('user_all') }}">Rejoignez en une !</a><br/>
-                <a class="btn" href="{{ path('family_new') }}">Créer en une !</a>
+                <a class="btn" href="{{ path('family_index') }}">Rejoignez une famille</a><br/>
+                <a class="btn" href="{{ path('family_new') }}">Créer une famille</a>
             {% else %}
                 <h2>Voici vos familles</h2>
                 <ul>
@@ -55,8 +55,8 @@
                     {% endfor %}
                 </ul>
                 <h2>Vous pouvez aussi rejoindre de nouvelles familles</h2>
-                <a class="btn" href="{{ path('user_all') }}">Rejoignez en une !</a><br/>
-                <a class="btn" href="{{ path('family_new') }}">Créer en une !</a>
+                <a class="btn" href="{{ path('family_index') }}">Rejoindre une famille</a><br/>
+                <a class="btn" href="{{ path('family_new') }}">Créer une famille</a>
             {% endif %}
         {% else %}
             <h2>Connectez vous pour accéder à votre compte!</h2>
