--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -6,7 +6,7 @@ main {
     padding: 20px;
     text-align: center;
     position: relative;
-    height: calc(100% - 100px);
+    height: 100%;
 }
 
 body, main * {
