--- a/app/public/css/diaporama.css
+++ b/app/public/css/diaporama.css
@@ -25,7 +25,7 @@ h2 {
     display: block;
 }
 
-.path {
+.path, .author_name {
     background-color: #DFD278;
     padding: 5px;
     margin: 10px auto;
