--- a/app/public/css/media_view.css
+++ b/app/public/css/media_view.css
@@ -35,14 +35,18 @@ h1 {
     width: 185px;
 }
 
-.path {
+.display_top_right {
     position: absolute;
-    top: 70px;
+    top: 40px;
     right: 2%;
     background-color: #DFD278;
     padding: 5px;
     margin: 10px;
     border-radius: 30px;
+}
+
+.path {
+    top: 70px;
 }
 
 .path a {
